# macaroni

./: .gitignore  Cargo.toml  README.md  TODO  flake.nix  input.lisp  input.mcr  input.txt  input1.txt  input2.txt  input4.txt  notes
src/: ast.rs  check.rs  data.rs  evaluate.rs  expand.rs  main.rs  monocheck.rs  parse.rs  types.rs  utils.rs
src/check/: instantiate.rs  ordered_env.rs  poly.rs  subtyping.rs  well_formed.rs
